# Attendy

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: FaceRecognitionSystem.cpp.A640D6DC5CFBBDBA.idx  FaceRecognitionSystem.hpp.24197DADF48B4DC4.idx  main.cpp.397572D4A583FC2F.idx
include/: FaceRecognitionSystem.hpp
src/: FaceRecognitionSystem.cpp  main.cpp
